# value-adders-agents

./: .bandit  .coverage  .env.example  .flake8  .gitignore  IMPROVEMENTS.md  Makefile  README.md  WEEK1_SUMMARY.md  coverage.xml  openai_test.py  orchestration_auto_demo.py  orchestration_demo.py  pyproject.toml
.github/workflows/: docs.yml
agents/: __init__.py  ceo_agent.py  community_partnerships_agent.py  data_analytics_agent.py  developer_agent.py  finance_funding_agent.py  legal_ethics_agent.py  marketing_brand_agent.py  orchestrator_agent.py  product_manager_agent.py  research_innovation_agent.py  scrum_master_agent.py  spiritual_alignment_agent.py  structured_outputs.py  technical_architect_agent.py  vision_strategy_agent.py
automation/: playbook.py  run_sprint.ps1  scheduled_runner.py
data_analytics/: DELIVERABLES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  dashboard_specifications.md  data_collection_pipeline.md  database_schema.sql  metrics_definition.md
docs/: automation_playbook.md  pathlog_blueprint.md
integrations/: __init__.py  notion_logger.py  notion_task_loader.py  slack_notifier.py
outputs/: __init__.py  deliverable_writer.py
pathlog/: __init__.py  api.py  crypto.py  models.py  quickstart.py  service.py  storage.py
pathlog/browser_extension/: README.md  background.js  content.js  manifest.json  options.css  options.html  options.js
tests/: conftest.py
tests/agents/: __init__.py  test_ceo_agent.py  test_developer_agent.py  test_orchestrator_agent.py  test_product_manager_agent.py
tests/integrations/: __init__.py  test_notion_logger.py
tests/outputs/: __init__.py  test_deliverable_writer.py
tests/tools/: __init__.py  test_web_fetch.py
tools/: __init__.py  web_fetch.py
value_adders_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
